# dd_trader

./: .gitignore  CONTRIBUTING.md  README.md  process_manager.py  trades.db  trading_bot.db  trading_bot_archive.db  trading_bot_copy.db  trading_bot_test.db
database/: discord_messages.db
dd_bot/: Cargo.toml  obj_detection.py  rocket.toml
dd_bot/python_helpers/: ORB_test.py  get_mouse_coords.py  inspect_items.py  inspect_items_test.py  multi_obj_detection.py  multi_obj_detection_inv_stash.py  multi_obj_detection_narrow.py  obj_detect_test.py  obj_detection.py  total_bot_gold.py  total_gold.py
dd_bot/src/: database_functions.rs  enigo_functions.rs  inspect_items_test.py  main.rs  obj_detection.py  trading_functions.rs
dd_bot/temp_images/: README.md
discord_bot/: bot_queue_test.py  bot_test.py  create_sqlite_database.py  database_helper.py  main.py  watchdog_test.py
discord_bot/helpers/: archive.py  check_locked.py  escrow_status.py  has_paid_gold_fee.py  other_trader_gold_left_in_escrow_check.py  stitching.py  traded_gold_match.py
shared/: ipc_communication.txt  ipc_restart.txt
