[package]
name = "dd_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.1.3"
rand = "0.8.5"
rocket = "0.5.0-rc.2"
rusqlite = "0.29.0"
tokio = { version = "1.32.0", features = ["full"] }
